tests/snapshots/examples_fixtures/type_system__failing__02_runtime_boundary_arg_violation.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/02_runtime_boundary_arg_violation.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The 1st argument to `typed_add` has the wrong type.

  --> examples/type_system/failing/02_runtime_boundary_arg_violation.flx:12:11
   |
 5 | fn typed_add(a: Int, b: Int) -> Int {

 6 |     a + b

 7 | }

 8 | 

 9 | let dynamic = old("oops")

10 | 

11 | 

12 | typed_add(dynamic, 1)
   |           ^^^^^^^
   |           ------- this argument is `String`

Help:
  Expected `Int` as the 1st argument.
== stdout ==
<not executed>
